src/test/ui/asm/issue-62046.stderr
error[E0668]: malformed inline assembly
  --> $DIR/issue-62046.rs:8:9
   |
LL |         asm!("nop" : "+r"("r15"));
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to previous error

For more information about this error, try `rustc --explain E0668`.
